required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version (future 6.0.2, SVN branch-6-0):
---------------------------

- WCS 1.0: Fix crash with some _rangeset_axes values (#4020)

- Changed msDrawVectorLayer() not to cache shapes if attribute binding is present after the first style (#3976)

- Fix mapscript to build when TRUE macro is not defined (#3926)

- Fix mapscript php build issues with MSVC (#4004)

- PHP/Mapscript: Segmentation fault when getting complex object using PHP 5.2 (#3930)

- Fixed contains operator in logical expresions (#3974)

- Fix incorrect rendering of GD lines between 1 and 2 pixels wide (#3962)

Version 6.0.1 (2011-07-12):
---------------------------

IMPORTANT SECURITY FIXES:

-  Fixes to prevent SQL injections through OGC filter encoding (in WMS, WFS 
   and SOS), as well as a potential SQL injection in WMS time support. 
   Your system may be vulnerable if it has MapServer with OGC protocols 
   enabled, with layers connecting to an SQL RDBMS backend, either 
   natively or via OGR (#3903) 

Other fixes:

- Applied patch for ticket (symbol writing issues) (#3589)

- Fix performance issue with Oracle and scrollable cursors (#3905)

- Fix attribute binding for layer styles (#3941)

- Added missing fclose() when writing query files (#3943)

- Fix double-free in msAddImageSymbol() when filename is a http resource (#3939)

- Fix rendering of lines with outlinewidth set if not on first style (#3935)

- Added writing of cluster object when saving map. Also improved handling of
  cluster parsing errors (#3934)

- Fix for the cluster processing if the shape bounds doesn't overlap 
  with the given extent (#3913)
