@@ -15,6 +15,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (future 6.0.2, SVN branch-6-0):
 ---------------------------
 
+- Added GEOMTRANSFORM in writeStyle function
+
 - WCS 1.0: Fix crash with some _rangeset_axes values (#4020)
 
 - Changed msDrawVectorLayer() not to cache shapes if attribute binding is present after the first style (#3976)
